# uniqx

./: .gitignore  .goreleaser.yml  .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md  client.go  go.mod  go.sum  install.sh  main.go  self_update.go  tunnel.go  utils.go
.github/workflows/: build.yaml  release.yaml
client/: Cargo.toml  client.go  httpHandler.go  websocketHandler.go
client/model/: request.go  response.go
client/src/: lib.rs  main.rs  uniq.rs  uniqx.rs  util.rs
client/src/console/: handler.rs  mod.rs  parser.rs  server.rs
client/src/console/static/: index.html  script.js  style.css
pkg/socket/: socket.go
pkg/utils/: console.go  pterm.go  url.go
server/: Cargo.toml
server/src/: event_server.rs  http_server.rs  lib.rs  main.rs  tunnel.rs  uniq.rs  uniqx.rs  util.rs
server/src/server/: control_server.rs  event_server.rs  http_server.rs  mod.rs  tcp_server.rs
server/src/tcp_server/: control_server.rs  event_server.rs  http_event_server.rs  http_server.rs  mod.rs  public_control_server.rs  public_http_server.rs  public_tcp_server.rs  tcp_listener.rs  tcp_server.rs
shared/: Cargo.toml
shared/src/: delimited.rs  events.rs  frame.rs  lib.rs  structs.rs  utils.rs
src/: main.rs
tests/: Cargo.toml  test.rs
