[package]
name = "uniqx"
version = "2.0.1"
description = "A simple tool to tunnel TCP and HTTP traffic."
authors = ["Yunik Maharjan <https://github.com/unique1o1>"]
readme = "README.md"
keywords = ["network", "cli", "tunnel", "tcp", "http"]
repository = "https://github.com/unique1o1/uniqx"
license = "MIT OR Apache-2.0"

edition = "2021"
rust-version = "1.56"

[[bin]]
name = "uniqx"
path = "src/main.rs"

[dependencies]
client = { path = "client" }
server = { path = "server" }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }
shared = { path = "shared" }
clap = { workspace = true }
anyhow = { workspace = true }
[workspace]
members = ["server", "client", "shared"]
resolver = "2"

[workspace.dependencies]
dashmap = { version = "5.5.0" }
anyhow = { version = "1.0.72" }
# crossbeam = "0.8"
clap = { version = "4.3.21", features = ["derive", "env"] }
tokio = { version = "1.31.0", features = [
    "rt-multi-thread",
    "io-util",
    "macros",
    "net",
    "time",
] }
uuid = { version = "1.4.1", features = ["serde", "v4"] }
serde = { version = "1.0.183", features = ["derive"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"

tokio-util = { version = "0.7.8", features = ["codec"] }
serde_json = "1.0.105"
socket2 = "0.5.3"

[profile.release]
opt-level = "z"
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = false
strip = true
