[package]
name = "client"
version = "0.1.0"
edition = "2021"
[[bin]]
name = "uniq"
path = "src/main.rs"
[dependencies]

# crossbeam = { workspace = true }
anyhow = { workspace = true }
shared = { path = "../shared" }
clap = { workspace = true }

tracing = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
tracing-subscriber = { workspace = true }
socket2 = { workspace = true }
tokio-util = { workspace = true }
