[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]

# crossbeam = { workspace = true }
anyhow = { workspace = true }
shared = { path = "../shared" }
clap = { workspace = true }
serde = { workspace = true }

serde_json = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
tracing-subscriber = { workspace = true }
socket2 = { workspace = true }
tokio-util = { workspace = true }
actix-web = { version = "4" }
futures-util = { version = "0.3.28", features = ["sink"] }
async-stream = "0.3.5"
httparse = "1.8.0"
tokio-stream = { version = "0.1.14", features = ["sync"] }
async-trait = "0.1.73"
# [features]
# console = ["dep:actix-web", "shared/console"]
