[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
# crossbeam = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }

shared = { path = "../shared" }

tokio = { workspace = true }
uuid.workspace = true

tracing-subscriber = { workspace = true }

tracing = { workspace = true }
ctrlc = "3.4.0"
async-trait = "0.1.73"
futures = "0.3.28"
