[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
shared = { path = "../shared" }
uuid = { workspace = true }
tokio = { workspace = true }
tracing-subscriber = { workspace = true }
dashmap = { workspace = true }
tracing = { workspace = true }
async-trait = "0.1.73"
socket2 = { workspace = true }
