[package]
name = "shared"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# crossbeam = { workspace = true }
tokio-util = { version = "0.7.8", features = ["codec"] }
anyhow = { workspace = true }
async-trait = "0.1.73"
serde = { workspace = true }
tokio = { workspace = true }
tokio-serde = { version = "0.8.0", features = ["bincode"] }
futures-util = { version = "0.3.28", features = ["sink"] }
bincode = "1.3.3"
bytes = { version = "1.4.0", features = ["std"] }
tracing = { workspace = true }
regex = "1.9.3"
clap = { workspace = true }
serde_json = { workspace = true }
