[package]
name = "tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shared = { path = "../shared" }
server = { path = "../server" }
client = { path = "../client" }

[[test]]
name = "test_crate1"
path = "./src/tests.rs"
